fix: msg text aligned to start

--- a/frontend/src/components/styles/MessagesLoader.module.css
+++ b/frontend/src/components/styles/MessagesLoader.module.css
@@ -20,7 +20,6 @@
   padding-bottom: 0.9rem;
   max-width: 45%;
   min-width: 3rem;
-  text-align: center;
 }
 
 div[aria-label="Your message"] {
